# openroles.dev

./: .gitignore  README.md  deploy.sh  repopulate.sh  start.sh  stop.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: admin.py  companies.py  jobs.py  summaries.py
backend/app/models/: __init__.py  company.py  job.py  scrape_run.py  summary.py
backend/app/services/: normalizer.py  scraper.py  synthesizer.py
backend/app/services/ats/: __init__.py  ashby.py  base.py  greenhouse.py  lever.py
backend/scripts/: init_db.py  load_profiles.py  seed_companies.py
backend/tests/: conftest.py  test_scraper_delta.py
frontend/: package-lock.json  package.json
frontend/app/: dashboard-content.tsx  globals.css  layout.tsx  page.tsx
frontend/app/companies/: companies-content.tsx  page.tsx
frontend/app/digest/: digest-content.tsx  page.tsx
frontend/app/jobs/: jobs-content.tsx  page.tsx
frontend/components/: alert.tsx  company-detail.tsx  company-row.tsx  digest-entry.tsx  index.ts  metric-card.tsx  nav.tsx  sparkline.tsx  star-field.tsx
frontend/lib/: api.ts  types.ts
info/: initial-prd.md
info/company_profiles/: anthropic.md  cohere.md  cursor.md  figure-ai.md  fireworks-ai.md  mistral.md  openai.md  perplexity.md  scale-ai.md  together-ai.md  xai.md
info/frontend-concept/: concept.jsx
